...
                }
            },
            label = { Text("Search game...") },
            modifier = Modifier
                .fillMaxWidth()
                .focusRequester(focusRequester)
                .testTag("SearchTextField"),
        )
        Spacer(Modifier.height(16.dp))
        when {
            lazyPagingItems.loadState.refresh is LoadState.Error -> {
                Text(
                    "Failed to load data.",
...
