...
            contentDescription = "Find game",
            contentScale = ContentScale.Inside,
            modifier = Modifier
                .align(Alignment.CenterHorizontally)
                .weight(1f)
                .clickable(onClick = onClickAdd)
                .testTag("NavigateToSearchButton"),
        )
    }
}

@Preview(showBackground = true)
@Composable
...
